--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -16,3 +16,6 @@ AppliedDefaultGraphicsPerformance=Maximum
 +ActiveGameNameRedirects=(OldGameName="TP_BlankBP",NewGameName="/Script/KorenchanMP2")
 +ActiveGameNameRedirects=(OldGameName="/Script/TP_BlankBP",NewGameName="/Script/KorenchanMP2")
 
+[/Script/Engine.RendererSettings]
+r.DefaultFeature.LightUnits=1
+
